WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108782
Fix build warning after
r141473
https://bugs.webkit.org/show_bug.cgi?id=108782
Summary
Fix build warning after r141473
KwangYong Choi
Reported
2013-02-03 18:08:43 PST
[ 83%] /home/cky/open-source/WebKit/Source/WebKit/efl/WebCoreSupport/EditorClientEfl.cpp:172:6: warning: unused parameter ‘pasteboardTypes’ [-Wunused-parameter] /home/cky/open-source/WebKit/Source/WebKit/efl/WebCoreSupport/EditorClientEfl.cpp:172:6: warning: unused parameter ‘pasteboardData’ [-Wunused-parameter]
Attachments
Patch
(10.77 KB, patch)
2013-02-03 18:20 PST
,
KwangYong Choi
haraken
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.72 KB, patch)
2013-02-03 21:14 PST
,
KwangYong Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
KwangYong Choi
Comment 1
2013-02-03 18:20:12 PST
Created
attachment 186283
[details]
Patch
Kentaro Hara
Comment 2
2013-02-03 18:23:20 PST
Comment on
attachment 186283
[details]
Patch Looks OK
Build Bot
Comment 3
2013-02-03 19:24:51 PST
Comment on
attachment 186283
[details]
Patch
Attachment 186283
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/16353858
KwangYong Choi
Comment 4
2013-02-03 21:14:23 PST
Created
attachment 186297
[details]
Patch Re-upload the patch file because of win-ews false alarm.
WebKit Review Bot
Comment 5
2013-02-03 22:00:55 PST
Comment on
attachment 186297
[details]
Patch Clearing flags on attachment: 186297 Committed
r141736
: <
http://trac.webkit.org/changeset/141736
>
WebKit Review Bot
Comment 6
2013-02-03 22:01:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug