Source/WebKit/blackberry/WebCoreSupport/EditorClientBlackBerry.cpp
@@ -258,7 +258,7 @@ void EditorClientBlackBerry::willWriteSelectionToPasteboard(WebCore::Range*)
     notImplemented();
 }
 
-void EditorClientBlackBerry::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>& pasteboardTypes, Vector<RefPtr<WebCore::SharedBuffer> >& pasteboardData)
+void EditorClientBlackBerry::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>&, Vector<RefPtr<WebCore::SharedBuffer> >&)
 {
     notImplemented();
 }
