Source/WebKit/efl/WebCoreSupport/EditorClientEfl.cpp
@@ -169,7 +169,7 @@ void EditorClientEfl::willWriteSelectionToPasteboard(WebCore::Range*)
 {
 }
 
-void EditorClientEfl::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>& pasteboardTypes, Vector<RefPtr<WebCore::SharedBuffer> >& pasteboardData)
+void EditorClientEfl::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>&, Vector<RefPtr<WebCore::SharedBuffer> >&)
 {
 }
 
