Source/WebKit/qt/WebCoreSupport/EditorClientQt.cpp
@@ -237,7 +237,7 @@ void EditorClientQt::willWriteSelectionToPasteboard(Range*)
 {
 }
 
-void EditorClientQt::getClientPasteboardDataForRange(Range*, Vector<String>& pasteboardTypes, Vector<RefPtr<SharedBuffer> >& pasteboardData)
+void EditorClientQt::getClientPasteboardDataForRange(Range*, Vector<String>&, Vector<RefPtr<SharedBuffer> >&)
 {
 }
 
