Source/WebKit/win/WebCoreSupport/WebEditorClient.cpp
@@ -232,7 +232,7 @@ void WebEditorClient::willWriteSelectionToPasteboard(WebCore::Range*)
     notImplemented();
 }
 
-void WebEditorClient::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>& pasteboardTypes, Vector<RefPtr<WebCore::SharedBuffer> >& pasteboardData)
+void WebEditorClient::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>&, Vector<RefPtr<WebCore::SharedBuffer> >&)
 {
     notImplemented();
 }
