Source/WebKit/wince/WebCoreSupport/EditorClientWinCE.cpp
@@ -144,7 +144,7 @@ void EditorClientWinCE::willWriteSelectionToPasteboard(WebCore::Range*)
     notImplemented();
 }
 
-void EditorClientWinCE::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>& pasteboardTypes, Vector<RefPtr<WebCore::SharedBuffer> >& pasteboardData)
+void EditorClientWinCE::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>&, Vector<RefPtr<WebCore::SharedBuffer> >&)
 {
     notImplemented();
 }
