Source/WebKit/wx/WebKitSupport/EditorClientWx.cpp
@@ -278,7 +278,7 @@ void EditorClientWx::willWriteSelectionToPasteboard(WebCore::Range*)
     notImplemented();
 }
 
-void EditorClientWx::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>& pasteboardTypes, Vector<RefPtr<WebCore::SharedBuffer> >& pasteboardData)
+void EditorClientWx::getClientPasteboardDataForRange(WebCore::Range*, Vector<String>&, Vector<RefPtr<WebCore::SharedBuffer> >&)
 {
     notImplemented();
 }
